[package]
authors = ["Rafael Bachmann <rafael.bachmann.93@gmail.com>"]
edition = "2018"
name = "hc12-at"
version = "0.1.0"

[dev-dependencies]
embedded-hal-mock = "0.7.2"

[dependencies]
at-commands = { version = "0.4.0", features = ["parser"] }
embedded-hal = "0.2.5"
nb = "1.0.0"
num-traits = "0.2.14"
num-derive = "0.3.3"
