[package]
authors = ["Rafael Bachmann <rafael.bachmann.93@gmail.com>"]
description = "An embedded-hal driver for the HC-12 serial transceiver module."
edition = "2018"
name = "hc12-at"
version = "0.1.0"
license-file = "LICENSE"
repository = "https://github.com/barafael/hc12-at-rs"

[dev-dependencies]
embedded-hal-mock = "0.7.2"
debugless-unwrap = "0.0.4"

[dependencies]
at-commands = "0.5.0"
embedded-hal = "0.2.5"
nb = "1.0.0"
num-traits = { version = "0.2.14", default-features = false }
num-derive = "0.3.3"
