[package]
name = "longan-nano-hc12"
version = "0.1.0"
authors = ["Rafael Bachmann <rafael.bachmann.93@gmail.de>"]
edition = "2018"
resolver = "2"

[dependencies]
gd32vf103xx-hal = "0.5.0"
embedded-hal = "0.2.7"
nb = "1.0.0"
riscv = "0.10.1"
riscv-rt = "0.11.0"
panic-halt = "0.2.0"
heapless = "0.8.0"
debugless-unwrap = "0.0.4"

hc12-at = { git = "https://github.com/barafael/hc12-at-rs.git" }
