[package]
name = "hc12-raspi-test"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = { version = "0.12.0", features = ["hal"] }
linux-embedded-hal = "0.3.0"
embedded-hal = "0.2.5"

[dependencies.hc12-at]
path = "../hc12-at"